<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RecNoteLayout6"
    android:background="@color/Khaki" >

    <TableRow
        android:id="@+id/tableRow61"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Brown"
        android:padding="@dimen/activity_horizontal_margin" >

        <TableRow
            android:id="@+id/tableRow62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/recordTitleView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="9"
                android:padding="10dp"
                android:text="@string/titlehint"
                android:textColor="@color/White"
                android:textSize="17sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow63"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_span="3" >

            <ImageButton
                android:id="@+id/imageEdit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:contentDescription="@string/notecolor"
                android:maxHeight="40dp"
                android:maxWidth="40dp"
                android:src="@drawable/ic_btn_edit_low" />

        </TableRow>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editLabel4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/edit_mode" />

        <TextView
            android:id="@+id/dateTimeLabel4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_span="3"
            android:text="@string/date_time_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/colTitleView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/column"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/colTitleView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/col1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/imageRight1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:src="@drawable/arrowright_low" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rowView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/row"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/rowView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:text="@string/row1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

</TableLayout>
