<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RecNoteLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Gainsboro" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/LightGray" >

        <ImageButton
            android:id="@+id/imageMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/menubtn"
            android:focusable="false"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_sidebar_low" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_logo_low" />

        <ImageButton
            android:id="@+id/imageAddRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/addbtn"
            android:focusable="false"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_add_low" />

        <ImageButton
            android:id="@+id/imageSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/searchbtn"
            android:focusable="false"
            android:paddingLeft="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_search_low" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Gray" >

        <TextView
            android:id="@+id/sortLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/sort_mod_time"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White" />

        <ImageButton
            android:id="@+id/imageSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/sortbtn"
            android:paddingTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_titlebar_right_arrow" />

    </TableRow>

</TableLayout>