<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RecNoteLayout5"
    android:background="@color/Khaki" >

    <TableRow
        android:id="@+id/tableRow51"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Brown"
        android:padding="@dimen/activity_horizontal_margin" >

        <TableRow
            android:id="@+id/tableRow52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/recordTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:text="@string/titlehint"
                android:textColor="@color/White"
                android:textSize="17sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >

            <ImageButton
                android:id="@+id/imageEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:contentDescription="@string/notecolor"
                android:maxHeight="40dp"
                android:maxWidth="40dp"
                android:src="@drawable/ic_btn_edit_low" />

        </TableRow>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/edit_mode" />

        <TextView
            android:id="@+id/dateTimeLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/colTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/column"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/imageRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:src="@drawable/arrowright_low" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rowView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/row"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

</TableLayout>
