<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RecNoteLayout4"
    android:background="@color/Khaki" >

    <TableRow
        android:id="@+id/tableRow41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Brown"
        android:padding="@dimen/activity_horizontal_margin" >

        <TableRow
            android:id="@+id/tableRow42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editRecordTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:ems="10"
                android:hint="@string/titlehint"
                android:inputType="text"
                android:padding="10dp" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >

            <ImageButton
                android:id="@+id/imageRecColor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Yellow"
                android:contentDescription="@string/notecolor"
                android:maxHeight="40dp"
                android:maxWidth="40dp"
                android:src="@drawable/bg_widget_normal_low" />

        </TableRow>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/edit_mode" />

        <TextView
            android:id="@+id/dateTimeLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <EditText
            android:id="@+id/editColTitle3"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/column" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageAddRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/addcolumn"
            android:paddingTop="10dp"
            android:src="@drawable/add_row" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow47"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TableLayout
            android:id="@+id/ColumnLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2" >

            <TableRow
                android:id="@+id/tableRow48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/rowImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/addcolumn"
                    android:paddingLeft="30dp"
                    android:src="@drawable/ic_mp_move" />

                <EditText
                    android:id="@+id/editRowTitle"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:hint="@string/row" />

                <ImageButton
                    android:id="@+id/imageDel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/del"
                    android:src="@drawable/ic_delete" />

            </TableRow>
            
        </TableLayout>
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <ImageButton
            android:id="@+id/imageAddRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/addcolumn"
            android:src="@drawable/add_row" />

    </TableRow>

</TableLayout>
